--- a/avocado.Rmd
+++ b/avocado.Rmd
@@ -10,6 +10,7 @@ Team Members: Andrew Chen, Vrinda Vegiraju, Kennedy Wendl
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(ggplot2)
+library(dplyr)
 ```
 
 ```{r}
@@ -49,8 +50,38 @@ avo_line = avo
 
 Time Series
 ```{r}
+#Time Series
 avo_time = avo
+avo_time2 <- avo_time %>%
+  mutate(Date = as.Date(Date)) %>%
+  group_by(year = lubridate::year(Date), month = lubridate::month(Date)) %>%
+  summarise(ave_price = mean(AveragePrice))
+
+#Most expensive
+avo_time_most <- avo_time2 %>% slice_max(ave_price)
+
+#Least expensive
+avo_time_least <- avo_time2 %>% slice_min(ave_price)
+
+#Make Graph
+ggplot(data = avo_time2, aes(x = as.Date(paste(year, month, "01", sep = "-")), y = ave_price)) +
+  geom_line() +
+  geom_point(data = avo_time_most, aes(x = as.Date(paste(year, month, "01", sep = "-")), 
+                                       y = ave_price), size = 2, color = "red") +
+  geom_text(data = avo_time_most, aes(label=round(ave_price, 2),
+                                      x = as.Date(paste(year, month, "01", sep = "-")),
+                                      y = ave_price), vjust = -1) +
+  geom_point(data = avo_time_least, aes(x = as.Date(paste(year, month, "01", sep = "-")), 
+                                       y = ave_price), size = 2, color = "blue") +
+  geom_text(data = avo_time_least, aes(label=round(ave_price, 2),
+                                      x = as.Date(paste(year, month, "01", sep = "-")),
+                                      y = ave_price), vjust = 2) +
+  labs(title = "Average Price of Avocados", x = "Year", y = "Average Price") +
+  ylim(1, 2) 
+  
 ```
+The average max price of avocados is going up, while the min price is about the same. 
+In 2015, the most expensive was \$1.45. In 2016, it was \$1.56. In 2017, it was \$1.84.
 
 Box
 ```{r}
@@ -66,6 +97,7 @@ avo_bar = avo
 
 Histogram
 ```{r}
+#Andrew
 avo_hist = avo
 ```
 
