--- a/avocado.Rmd
+++ b/avocado.Rmd
@@ -102,13 +102,15 @@ avo_hist2 <- subset(avo_hist, !(region %in% c("Midsouth", "Northeast", "SouthCen
                                               "Southeast", "West", "TotalUS" )))
 
 ggplot(data = avo_hist2, aes(x = Total_Volume)) +
-  geom_histogram(bins = 50) +
-  scale_x_continuous(limits = c(0, 6500000), labels = scales::comma_format()) +
-  coord_cartesian(ylim = c(0, 2500)) +
+  geom_histogram() +
+  scale_x_continuous(limits = c(0, 3000000), labels = scales::comma_format()) +
+  coord_cartesian(ylim = c(0, 2000)) +
   facet_wrap(~type)
 
 ```
-
+Some of the data was cut off to make the graphs more readable.
+More conventional type avocados were sold and at greater volumes.
+Organic type avocados has under 500,000 in volume.
 
 Mosaic
 ```{r}
