--- a/avocado.Rmd
+++ b/avocado.Rmd
@@ -15,7 +15,7 @@ library(dplyr)
 
 ```{r}
 avo = read.csv("avocado.csv", header = TRUE)
-avo
+#avo
 ```
 
 We will be using the avocados data set from https://www.kaggle.com/datasets/neuromusic/avocado-prices. 
@@ -108,6 +108,7 @@ ggplot(data = avo_time2, aes(x = as.Date(paste(year, month, "01", sep = "-")), y
   ylim(1, 2) 
   
 ```
+This time series plot shows the average price of avocados by year. 
 The average max price of avocados is going up, while the min price is about the same. 
 In 2015, the most expensive was \$1.45. In 2016, it was \$1.56. In 2017, it was \$1.84.
 
@@ -158,14 +159,7 @@ ggplot(data = avo_hist2, aes(x = Total_Volume)) +
 Some of the data was cut off to make the graphs more readable.
 More conventional type avocados were sold and at greater volumes.
 Organic type avocados has under 500,000 in volume.
+Overall, avocados were bought in smaller volumes.
 
-Mosaic
-```{r}
-avo_mos = avo
-```
 
-Map
-```{r}
-avo_map = avo
-```
 
